# action-pull-request-merge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: build.yml  lock.yml  merge.yml  release.yml
docker/: Dockerfile
src/: action.rs  context.rs  gitea_client.rs  github_client.rs  inputs.rs  lib.rs  logger.rs  main.rs
tests/: integration.rs  wire.rs
