[package]
name = "action-pull-request-merge"
version = "2.0.0"
edition = "2021"
authors = ["williamdes"]
description = "GitHub Action to merge a pull-request, written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sudo-bot/action-pull-request-merge"

[[bin]]
name = "action-pull-request-merge"
path = "src/main.rs"

[lib]
name = "action_pull_request_merge"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# GitHub API client (de-facto standard for Rust)
octocrab = "0.49"
# JSON for parsing the event payload
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Regex for username/label matching
regex = "1"
# Error handling
anyhow = "1"
# Async trait support so we can mock the GitHub client in tests
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
